fix: 修正 part01 demo 中几处拼写与参数错误